--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
+    { "source": "/product", "destination": "/product.html" },
     { "source": "/(.*)", "destination": "/" }
   ]
 }
